bug 432967 - WARNING: NS_ENSURE_TRUE(aContent) failed: file nsAccessibilityUtils.cpp, line 262, patch by Ginn Chen <ginn.chen@sun.com>, r=aaronlev